--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                       <th>New archtecture</th>
                     </tr>
                     <tr>
-                      <td>Confusion matrics</td>
+                      <td>Confusion matrix</td>
                       <td><img src="img/old_cnn_archtecture.png" class="img-fluid" alt="Responsive image"></td>
                       <td><img src="img/new_cnn_archtecture2.png" class="img-fluid" alt="Responsive image"></td>
                     </tr>
