Added an explanation

--- a/index.html
+++ b/index.html
@@ -482,7 +482,10 @@
                     exploration parameter</span> is pretty important because there is a <span class="marker">concept of
                     exploration and
                     exploitation
-                    trade-off</span>.<br>
+                    trade-off</span>.<br><br>
+
+                  <span class="marker">* Training curve will be shown once training gets done.</span>
+                  <br>
                   <br>
                   <h5>Worth to try</h5>
                   - Define a new state: The way I use to define state is that encoding Open, High, Low, Close by using
