--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="author" content="">
 
   <title>Kohei Suzuki</title>
+  <link rel="shortcut icon" href="img/favicon.ico">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
