Modified intro section

--- a/index.html
+++ b/index.html
@@ -130,20 +130,30 @@
         </div>
         <p class="lead mb-5">Hi, I am <span class="marker">Kohei</span>. <br>I am a <span class="marker">Machine
             Learning Engineer</span> in the
-          Vancouver area with 6 months of working experience at Singular Software and<span class="marker text-primary">
-            am actively
-            looking for a job as a Machine Learning Engineer in the Vancouver
-            area.</span><br>I
-          have spent a lot of time to fill computer science knowledge, especially in machine learning by doing
-          tutorials and kaggles, reading blog posts and papers, and getting my hands dirty by creating
-          projects.<br> I <span class="marker">already have a valid work permit</span> in Canada for one year which
-          starts <span class="marker">from 1st May 2020</span>.<br>
+          Vancouver area with 6 months of working experience at Singular Software where has been working on phone based
+          hearing
+          assistive app with Deep Learning.<br>
+          I went to two coding Bootcamps where I learned a wide range of machine learning and data science technics, and
+          I
+          always try to gain knowledge through MOOCs, reading blog posts and papers, and working on projects.<br>
+          <!-- <span class="marker text-primary"></span>I am interested in working at a big company but also startups so I study web
+            development, other programming
+            languages like c/c++ in order to become a generalist.</span><br> -->
+          I am interested in working at a big company but also startups so I study web
+          development, other programming
+          languages like c/c++ in order to become a generalist.
+          I <span class="marker">already have a valid
+            work permit</span> in Canada for one year which
+          starts <span class="marker">from Aug 2020</span>.<br>
           I will definitely reach goals because <span class="marker">I never give up on what I am
             doing</span>.</p>
         <p><span class="marker">Main skills</span><br>
-          OS: Ubuntu, OSX<br>
-          Python: TensorFlow, Keras, Pandas, Numpy, Matplotlib, Sklearn, Jupyter Notebook, Tensorforce, SCipy, Flask<br>
-          Others: Github, Anaconda, AWS EC2, Trello, Java, SQL, Bash, ssh</p>
+          - OS: Ubuntu, OSX<br>
+          - Programming Laguage:<br>
+          &ensp;Python (TensorFlow, Keras, Pandas, Numpy, Matplotlib, Sklearn, Jupyter Notebook, Tensorforce, SCipy,
+          Flask)<br>
+          &ensp;C/C++, Java, SQL, Bash<br>
+          - Others: Github, AWS, Algorithms and Data structures</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/koheisuzuki" target="_blank">
             <i class="fab fa-linkedin-in"></i>
