--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </h1>
         <div class="subheading mb-5">email address:
           <a href="mailto:koheisuzuki808@gmail.com">koheisuzuki808@gmail.com</a>&emsp;|&emsp;
-          <a href="docs/koheisuzuki_resume_ver0_2020.pdf" download><i class="fa fa-download"></i> Download CV</a>
+          <a href="docs/koheisuzuki_resume_ver0_2020.pdf" target="_blank">Download CV</a>
         </div>
         <p class="lead mb-5">Hi, I am <span class="marker">Kohei</span>. <br>I am a <span class="marker">Machine
             Learning Engineer</span> in the
