display none for resume

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       top: -15px;
       left: 50px;
     }
+
+    #resume {
+      display: none;
+    }
   </style>
 
 </head>
@@ -126,7 +130,7 @@
         </h1>
         <div class="subheading mb-5">email address:
           <a href="mailto:koheisuzuki808@gmail.com">koheisuzuki808@gmail.com</a>&emsp;|&emsp;
-          <a href="docs/koheisuzuki_resume_ver0_2020.pdf" target="_blank">Download CV</a>
+          <a href="docs/koheisuzuki_resume_ver0_2020.pdf" target="_blank" id="resume">Download CV</a>
         </div>
         <p class="lead mb-5">Hi, I am <span class="marker">Kohei</span>. <br>I am a <span class="marker">Machine
             Learning Engineer</span> in the
